<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="restaurantInfoViewModel"
            type="com.example.restaurantsexplorer.RestaurantInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RestaurantInfoActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/restaurant_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/an_restaurant_feature_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/restaurant_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.5"
                        android:background="@color/grey">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:alpha="0.3" />
                    </FrameLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:id="@+id/restaurant_name"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="5dp"
                            android:ellipsize="end"
                            android:fontFamily="@font/comfortaa_bold"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:text="@string/dominick_pizza"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            app:cardBackgroundColor="#5BA829"
                            android:id="@+id/restaurant_rating_card"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/restaurant_rating"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_bold"
                                android:text="@string/restaurant_rating"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/see_reviews_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@color/background_color"
            android:text="@string/see_reviews"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/image_card"

            />

        <Button
            android:id="@+id/see_more_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@color/background_color"
            android:text="@string/see_more"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_card" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="243dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:background="#eeeeee"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/menu_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/address"
                android:textColor="#222831"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat"
                android:maxLength="150"
                android:id="@+id/restaurant_address"
                android:maxLines="2"
                android:text="@string/address_info"
                android:textColor="#222831"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/locality"
                    android:textColor="#222831"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/montserrat"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:id="@+id/restaurant_locality"
                    android:text="@string/locality_info"
                    android:textColor="#222831"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/city"
                    android:textColor="#222831"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/montserrat"
                    android:maxLength="20"
                    android:id="@+id/restaurant_city"
                    android:maxLines="1"
                    android:text="@string/city_info"
                    android:textColor="#222831"
                    android:textSize="13sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/timing"
                android:textColor="#222831"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat"
                android:maxLength="150"
                android:maxLines="2"
                android:id="@+id/restaurant_timing"
                android:text="@string/timing_info"
                android:textColor="#222831"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/contact"
                android:textColor="#222831"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat"
                android:maxLength="100"
                android:maxLines="1"
                android:id="@+id/restaurant_contact"
                android:text="@string/contact_info"
                android:textColor="#222831"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/background_color"
            android:text="@string/see_menu"
            android:textSize="18sp"
            app:backgroundTint="@null"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
