<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="@color/background_color"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/linear_layout"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#f58552"
                android:layout_margin="5dp"
                android:id="@+id/image_card"
                app:cardCornerRadius="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#f58552"
                    android:background="#f58552"
                    app:cardCornerRadius="80dp">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:id="@+id/image"
                        android:src="@drawable/cupcake"
                        android:contentDescription="@string/a_person_profile_image" />
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:layout_margin="5dp"
                    android:text="@string/person_name"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/white"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rating_card"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cardBackgroundColor="#5BA829"
                    android:layout_marginEnd="25dp"
                    >
                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_1"
                        android:id="@+id/rating"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserrat_bold"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/time"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    android:id="@+id/time"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/rating_card"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/rating_text"
                    android:text="@string/average"
                    android:fontFamily="@font/montserrat"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/back_color"
            android:padding="10dp"
            app:cardBackgroundColor="@color/background_color"
            >
            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:background="@color/background_color"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:paddingBottom="6dp"
                android:id="@+id/review_text"
                android:fontFamily="sans-serif"
                android:text="@string/customer_review"
                />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>
