<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="6dp"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="6dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/card_border_colour">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="1dp"
            app:cardBackgroundColor="@color/card_background_color">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardCornerRadius="6dp"
                    android:layout_height="170dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:scaleType="centerCrop"
                        android:id="@+id/restaurant_image"
                        android:src="@drawable/restaurant_image"
                        android:contentDescription="@string/an_restaurant_feature_image" />
                </androidx.cardview.widget.CardView>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        android:id="@+id/restaurant_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/montserrat_regular"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:layout_marginTop="5dp"
                        android:text="@string/dominick_pizza"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="40dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        app:cardBackgroundColor="#5BA829"
                        android:id="@+id/restaurant_rating_card"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/restaurant_rating"
                            android:id="@+id/restaurant_rating"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            />
                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/restaurant_address"
                        android:textSize="13sp"
                        android:fontFamily="@font/montserrat"
                        android:ellipsize="end"
                        android:maxLines="1"

                        android:id="@+id/restaurant_address"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginStart="5dp"
                        android:maxLength="40"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/white"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/restaurant_rating_text"
                        android:id="@+id/restaurant_rating_text"
                        android:textAlignment="center"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="15dp"
                        android:textSize="13sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>