<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_color"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_margin="5dp"
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/find_your_city_image"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:padding="8dp"
                android:textColor="@color/white"
                android:text="@string/find_info"
                android:textSize="38sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />
        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <LinearLayout
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@color/back_color"
                android:weightSum="1"
                android:id="@+id/search"
                >

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:textSize="18sp"
                    android:padding="6dp"
                    android:textColor="@color/white"
                    android:hint="@string/search_your_city"
                    android:background="@drawable/rounded_edittext"
                    android:layout_weight="1"
                    android:autofillHints="New York,Jaipur,Patiala" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintTop_toBottomOf="@+id/search"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/search_instruction">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/select_from_following_or_search_above"
                    />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                app:layout_constraintTop_toBottomOf="@+id/search_instruction"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/city_item"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
